fix: breadcrumb-area responsive spacing

--- a/sass/modules/breadcrumb/_breadcrumb.scss
+++ b/sass/modules/breadcrumb/_breadcrumb.scss
@@ -1,5 +1,5 @@
 .page-breadcrumb-area {
-  padding-top: 127px 272px 194px 272px;
+  padding: 127px 272px 194px 272px;
   margin: 30px 40px 0 40px;
   position: relative;
   z-index: 2;
